# DS-PC-2024-1

./: .gitignore  CMakeLists.txt  README.md
lab_1/: DS_LAB_1_HALYCH.ipynb  main.cpp
lab_2/: main.cpp
